# myonlinestore-connect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  security.yml
examples/: async_example.py  quickstart.py
myonlinestore/: __init__.py  client.py  config.py  exceptions.py  http.py  pagination.py
myonlinestore/models/: __init__.py
myonlinestore/resources/: __init__.py  articles.py  base.py  categories.py  customers.py  discount_codes.py  newsletter.py  orders.py  simple.py
tests/: conftest.py  test_articles.py  test_async.py  test_customers.py  test_extended.py  test_live_shapes.py  test_models.py  test_orders.py  test_query_coverage.py  test_retry.py
