[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myonlinestore-connect"
version = "1.0.0"
description = "Python client SDK for the MyOnlineStore Connect API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["myonlinestore", "ecommerce", "api", "sdk", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0,<1.0",
    "pydantic>=2.0.0,<3.0",
]

[project.urls]
Homepage = "https://connect.myonlinestore.com/"
Documentation = "https://connect.myonlinestore.com/swagger-docs"
Repository = "https://github.com/eibrahimov/myonlinestore-connect"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.hatch.build]
exclude = [
    "/.venv/",
    "/.venv-*/",
    "/venv/",
    "/env/",
    "/dist/",
    "/build/",
    "/.pytest_cache/",
    "/.mypy_cache/",
    "/.ruff_cache/",
    "/__pycache__/",
]

[tool.hatch.build.targets.wheel]
packages = ["myonlinestore"]
